# HR-Assistant

./: README.md  emails.py  hrms.db  pyproject.toml  requirements.txt  server.py  temp_hrms_test.db  utils.py
HRMS/: database.py  employee_manager.py  leave_manager.py  meeting_manager.py  schemas.py  ticket_manager.py
frontend/: app.py
