[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atliq-hr-assist"
version = "0.1.0"
description = "HRMS AI Assistant"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "streamlit",
    "groq",
    "python-dotenv",
    "pydantic",
    "mcp",
    "fastmcp"
]
